# vinttem-fastapi

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-staging.yaml  docker-compose.aws.yaml  docker-compose.staging.yaml  docker-compose.yaml  main.py  notes.excalidraw  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 8c74d69e93d6_initial_migration.py  9740608f4c41_initial_migration.py
migrations/: env.py
migrations/versions/: 9fdd9858c356_add_datetime_fields_to_transaction.py  fc268cf07e66_initial_migration.py
proxy/nginx/: default-ssl.conf.tpl  default.conf.tpl
src/: config.py  default.toml  main.py  settings.toml
src/api/: main_router.py
src/api/api_v1/: transactions.py  v1_router.py
src/models/: transaction.py
src/proxy/: Dockerfile  run.sh
src/proxy/nginx/: default.conf.tpl
src/tests/: test_transactions.py
src/transactions/: models.py  router.py
tests/: test_transactions.py
