[tool.poetry]
name = "vinttem-fastapi"
version = "0.1.0"
description = ""
authors = ["Matheus Lopes <mlopes.matheus@gmail.com>"]
readme = "README.md"
#packages = [{include = "vinttem_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standart"], version = "^0.21.1"}
sqlmodel = "^0.0.8"
dynaconf = "^3.1.12"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.1"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.7"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
codecov = "^2.1.13"

[build-system]
requires = ["poetry-core>="]
build-backend = "poetry.core.masonry.api"
